--- a/.config
+++ b/.config
@@ -24,30 +24,30 @@ CONFIG_PACKAGE_wpad-wolfssl=y
 # CONFIG_PACKAGE_wpad-basic-wolfssl is not set
 
 ## ddns
-CONFIG_PACKAGE_luci-app-ddns=y
-CONFIG_PACKAGE_ddns-scripts=y
-CONFIG_PACKAGE_ddns-scripts-cloudflare=y
-CONFIG_PACKAGE_ddns-scripts-cnkuai=y
-CONFIG_PACKAGE_ddns-scripts-digitalocean=y
-CONFIG_PACKAGE_ddns-scripts-dnspod=y
-CONFIG_PACKAGE_ddns-scripts-freedns=y
-CONFIG_PACKAGE_ddns-scripts-gandi=y
-CONFIG_PACKAGE_ddns-scripts-godaddy=y
-CONFIG_PACKAGE_ddns-scripts-noip=y
-CONFIG_PACKAGE_ddns-scripts-ns1=y
-CONFIG_PACKAGE_ddns-scripts-nsupdate=y
-CONFIG_PACKAGE_ddns-scripts-one=y
-CONFIG_PACKAGE_ddns-scripts-pdns=y
-CONFIG_PACKAGE_ddns-scripts-route53=y
-CONFIG_PACKAGE_ddns-scripts-services=y
-CONFIG_PACKAGE_ddns-scripts-transip=y
+#CONFIG_PACKAGE_luci-app-ddns=y
+#CONFIG_PACKAGE_ddns-scripts=y
+#CONFIG_PACKAGE_ddns-scripts-cloudflare=y
+#CONFIG_PACKAGE_ddns-scripts-cnkuai=y
+#CONFIG_PACKAGE_ddns-scripts-digitalocean=y
+#CONFIG_PACKAGE_ddns-scripts-dnspod=y
+#CONFIG_PACKAGE_ddns-scripts-freedns=y
+#CONFIG_PACKAGE_ddns-scripts-gandi=y
+#CONFIG_PACKAGE_ddns-scripts-godaddy=y
+#CONFIG_PACKAGE_ddns-scripts-noip=y
+#CONFIG_PACKAGE_ddns-scripts-ns1=y
+#CONFIG_PACKAGE_ddns-scripts-nsupdate=y
+#CONFIG_PACKAGE_ddns-scripts-one=y
+#CONFIG_PACKAGE_ddns-scripts-pdns=y
+#CONFIG_PACKAGE_ddns-scripts-route53=y
+#CONFIG_PACKAGE_ddns-scripts-services=y
+#CONFIG_PACKAGE_ddns-scripts-transip=y
 
 ## Passwall
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+#CONFIG_PACKAGE_luci-app-passwall=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy is not set
-CONFIG_PACKAGE_luci-app-passwall_Nftables_Transparent_Proxy=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
+#CONFIG_PACKAGE_luci-app-passwall_Nftables_Transparent_Proxy=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
 # CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client is not set
@@ -72,7 +72,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
 
 
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-mosdns=y
+#CONFIG_PACKAGE_luci-app-mosdns=y
 CONFIG_PACKAGE_luci-app-opkg=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-ttyd=y
